...
                style: TextStyle(fontSize: 20),
              )),
              decoration: BoxDecoration(color: Theme.of(context).primaryColor),
            ),
            ListTile(
              title: Text(
                "Home",
              ),
              onTap: () {
                Navigator.pushReplacement(
                  context,
                  MaterialWithModalsPageRoute(builder: (context) {
                    return Homepage();
...
